<resources>
    <string name="app_name">Drinky</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_login">Name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_password_repeat">Repeat Password</string>
    <string name="action_select">Select</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_create">"Create"</string>
    <string name="search_drink">"Search Drink"</string>
    <string name="hello_blank_fragment" translatable="false">--</string>
    <string name="share_party_on_facebook">Share Party</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
</resources>
